ss6919: refactor: fisrt refactor done: removed and refined duplication code