@@ -49,21 +49,20 @@ public class ARMInstructionRoutines {
     dataSegment.put(msgLabel, ascii);
 
     List<Instruction> instructions = List.of(
-            readLabel,
-            new Push(Collections.singletonList(LR)),
-    /* fst arg of read is the snd arg of scanf (storing address) */
-            new Mov(r1, new Operand2(r0)),
-    /* fst arg of scanf is the format */
-            new LDR(r0, new LabelAddressing(msgLabel)),
-    /* skip the first 4 byte of the msg which is the length of it */
-            new Add(r0, r0, new Operand2(4)), new BL(SCANF.toString()),
-            new Pop(Collections.singletonList(PC)));
+      readLabel,
+      new Push(Collections.singletonList(LR)),
+      /* fst arg of read is the snd arg of scanf (storing address) */
+      new Mov(r1, new Operand2(r0)),
+      /* fst arg of scanf is the format */
+      new LDR(r0, new LabelAddressing(msgLabel)),
+      /* skip the first 4 byte of the msg which is the length of it */
+      new Add(r0, r0, new Operand2(4)), new BL(SCANF.toString()),
+      new Pop(Collections.singletonList(PC)));
 
     return instructions;
   };
 
   public static RoutineFunction addPrint = (routine, labelGenerator, dataSegment) -> {
-
     Label msgLabel = labelGenerator.getLabel();
     switch (routine) {
       case PRINT_CHAR:
@@ -92,43 +91,39 @@ public class ARMInstructionRoutines {
     /* add the helper function label */
     Label label = new Label(routine.toString());
     List<Instruction> instructions = List.of(
-            label,
-            new Push(Collections.singletonList(LR)), new LDR(r0, new LabelAddressing(printlnMsgLabel)),
-            /* skip the first 4 byte of the msg which is the length of it */
-            new Add(r0, r0, new Operand2(4)),
-            new BL(PUTS.toString()),
-            /* refresh the r0 and buffer */
-            new Mov(r0, new Operand2(0)),
-            new BL(FFLUSH.toString()),
-            new Pop(Collections.singletonList(PC))
+      label,
+      new Push(Collections.singletonList(LR)), new LDR(r0, new LabelAddressing(printlnMsgLabel)),
+      /* skip the first 4 byte of the msg which is the length of it */
+      new Add(r0, r0, new Operand2(4)),
+      new BL(PUTS.toString()),
+      /* refresh the r0 and buffer */
+      new Mov(r0, new Operand2(0)),
+      new BL(FFLUSH.toString()),
+      new Pop(Collections.singletonList(PC))
     );
 
     return instructions;
   };
 
   public static RoutineFunction addThrowRuntimeError = (routine, labelGenerator, dataSegment) ->  {
-    List<Instruction> instructions = new ArrayList<>();
-
     if (alreadyExist.contains(THROW_RUNTIME_ERROR)) {
       return new ArrayList();
     }
-
     alreadyExist.add(THROW_RUNTIME_ERROR);
 
-    /* add the helper function label */
-    Label label = new Label(THROW_RUNTIME_ERROR.toString());
-    instructions.add(label);
-    instructions.add(new BL(PRINT_STRING.toString()));
-    instructions.add(new Mov(r0, new Operand2(-1)));
-    instructions.add(new BL(EXIT.toString()));
+    List<Instruction> instructions = List.of(
+      /* add the helper function label */
+      new Label(THROW_RUNTIME_ERROR.toString()),
+      new BL(PRINT_STRING.toString()),
+      new Mov(r0, new Operand2(-1)),
+      new BL(EXIT.toString())
+    );
     instructions.addAll(addPrintMultiple(dataSegment, labelGenerator));
 
     return instructions;
   };
 
   public static RoutineFunction addFree = (routine, labelGenerator, dataSegment)->{
-    List<Instruction> instructions = new ArrayList<>();
-
     Label msg = null;
     for(Label msg_ : dataSegment.keySet()) {
       if(dataSegment.get(msg_).equals("\"NullReferenceError: dereference a null reference\\n\\0\"")) {
@@ -140,23 +135,26 @@ public class ARMInstructionRoutines {
       msg = addMsg("\"NullReferenceError: dereference a null reference\\n\\0\"", dataSegment, labelGenerator);
     }
 
-    /* add the helper function label */
-    Label freeLabel = new Label(routine.toString());
-
-    instructions.add(freeLabel);
-    instructions.add(new Push(Collections.singletonList(LR)));
-    instructions.add(new Cmp(r0, new Operand2(0)));
-    instructions.add(new LDR(r0, new LabelAddressing(msg), LDREQ));
-    instructions.add(new B(EQ, THROW_RUNTIME_ERROR.toString()));
+    List<Instruction> instructions = List.of(
+      /* add the helper function label */
+      new Label(routine.toString()),
+      new Push(Collections.singletonList(LR)),
+      new Cmp(r0, new Operand2(0)),
+      new LDR(r0, new LabelAddressing(msg), LDREQ),
+      new B(EQ, THROW_RUNTIME_ERROR.toString())
+    );
 
     if(routine.equals(FREE_PAIR)) {
-      instructions.add(new Push(Collections.singletonList(r0)));
-      instructions.add(new LDR(r0, new AddressingMode2(OFFSET, r0)));
-      instructions.add(new BL(FREE.toString()));
-      instructions.add(new LDR(r0, new AddressingMode2(OFFSET, SP)));
-      instructions.add(new LDR(r0, new AddressingMode2(OFFSET, r0, 4)));
-      instructions.add(new BL(FREE.toString()));
-      instructions.add(new Pop(Collections.singletonList(r0)));
+      List<Instruction> free_pair_instructions = List.of(
+        new Push(Collections.singletonList(r0)),
+        new LDR(r0, new AddressingMode2(OFFSET, r0)),
+        new BL(FREE.toString()),
+        new LDR(r0, new AddressingMode2(OFFSET, SP)),
+        new LDR(r0, new AddressingMode2(OFFSET, r0, 4)),
+        new BL(FREE.toString()),
+        new Pop(Collections.singletonList(r0))
+      );
+      instructions.addAll(free_pair_instructions);
     }
     instructions.add(new BL(FREE.toString()));
     instructions.add(new Pop(Collections.singletonList(PC)));
@@ -166,80 +164,78 @@ public class ARMInstructionRoutines {
   };
 
   public static RoutineFunction addCheckNullPointer = (routine, labelGenerator, dataSegment) ->  {
-    List<Instruction> instructions = new ArrayList<>();
-
     Label msgLabel = labelGenerator.getLabel();
     dataSegment.put(msgLabel, "\"NullReferenceError: dereference a null reference\\n\\0\"");
 
-    /* add the helper function label */
-    Label label = new Label(CHECK_NULL_POINTER.toString());
-    instructions.add(label);
-    instructions.add(new Push(Collections.singletonList(LR)));
-    instructions.add(new Cmp(r0, new Operand2(0)));
-    instructions.add(new LDR(r0, new LabelAddressing(msgLabel), LDREQ));
-    instructions.add(new BL(EQ, THROW_RUNTIME_ERROR.toString()));
-    instructions.add(new Pop(Collections.singletonList(PC)));
+    List<Instruction> instructions = List.of(
+      /* add the helper function label */
+      new Label(CHECK_NULL_POINTER.toString()),
+      new Push(Collections.singletonList(LR)),
+      new Cmp(r0, new Operand2(0)),
+      new LDR(r0, new LabelAddressing(msgLabel), LDREQ),
+      new BL(EQ, THROW_RUNTIME_ERROR.toString()),
+      new Pop(Collections.singletonList(PC))
+    );
     instructions.addAll(addThrowRuntimeError.routineFunctionAssemble(THROW_RUNTIME_ERROR, labelGenerator, dataSegment));
 
     return instructions;
   };
 
   public static RoutineFunction addCheckDivByZero = (routine, labelGenerator, dataSegment) ->  {
-    List<Instruction> instructions = new ArrayList<>();
-
     /* overwrite, routine has to be check divide by zero */
     routine = CHECK_DIVIDE_BY_ZERO;
 
     Label msgLabel = labelGenerator.getLabel();
     dataSegment.put(msgLabel, "\"DivideByZeroError: divide or modulo by zero\\n\\0\"");
 
-    /* add the helper function label */
-    Label label = new Label(routine.toString());
-    instructions.add(label);
-    instructions.add(new Push(Collections.singletonList(LR)));
-    instructions.add(new Cmp(r1, new Operand2(0)));
-    instructions.add(new LDR(r0, new LabelAddressing(msgLabel), LDREQ));
-    instructions.add(new BL(EQ, THROW_RUNTIME_ERROR.toString()));
-    instructions.add(new Pop(Collections.singletonList(PC)));
+    List<Instruction> instructions = List.of(
+      /* add the helper function label */
+      new Label(routine.toString()),
+      new Push(Collections.singletonList(LR)),
+      new Cmp(r1, new Operand2(0)),
+      new LDR(r0, new LabelAddressing(msgLabel), LDREQ),
+      new BL(EQ, THROW_RUNTIME_ERROR.toString()),
+      new Pop(Collections.singletonList(PC))
+    );
     instructions.addAll(addThrowRuntimeError.routineFunctionAssemble(THROW_RUNTIME_ERROR, labelGenerator, dataSegment));
 
     return instructions;
   };
 
   public static RoutineFunction addCheckArrayBound = (routine, labelGenerator, dataSegment) ->  {
-
     /* overwrite, routine has to be check array bound */
     routine = CHECK_ARRAY_BOUND;
-    List<Instruction> instructions = new ArrayList<>();
 
     Label negativeIndexLabel = labelGenerator.getLabel();
     dataSegment.put(negativeIndexLabel, "\"ArrayIndexOutOfBoundsError: negative index\\n\\0\"");
     Label indexOutOfBoundLabel = labelGenerator.getLabel();
     dataSegment.put(indexOutOfBoundLabel, "\"ArrayIndexOutOfBoundsError: index too large\\n\\0\"");
 
-    instructions.add(new Label(routine.toString()));
-    instructions.add(new Push(Collections.singletonList(LR)));
-    instructions.add(new Cmp(r0, new Operand2(0)));
-    instructions.add(new LDR(r0, new LabelAddressing(negativeIndexLabel), LDRLT));
-    instructions.add(new BL(Cond.LT, THROW_RUNTIME_ERROR.toString()));
-    instructions.add(new LDR(r1, new AddressingMode2(OFFSET, r1)));
-    instructions.add(new Cmp(r0, new Operand2(r1)));
-    instructions.add(new LDR(r0, new LabelAddressing(indexOutOfBoundLabel), LDRCS));
-    instructions.add(new BL(Cond.CS, THROW_RUNTIME_ERROR.toString()));
-    instructions.add(new Pop(Collections.singletonList(PC)));
+    List<Instruction> instructions = List.of(
+      new Label(routine.toString()),
+      new Push(Collections.singletonList(LR)),
+      new Cmp(r0, new Operand2(0)),
+      new LDR(r0, new LabelAddressing(negativeIndexLabel), LDRLT),
+      new BL(Cond.LT, THROW_RUNTIME_ERROR.toString()),
+      new LDR(r1, new AddressingMode2(OFFSET, r1)),
+      new Cmp(r0, new Operand2(r1)),
+      new LDR(r0, new LabelAddressing(indexOutOfBoundLabel), LDRCS),
+      new BL(Cond.CS, THROW_RUNTIME_ERROR.toString()),
+      new Pop(Collections.singletonList(PC))
+    );
 
     return instructions;
   };
 
   public static RoutineFunction addThrowOverflowError = (routine, labelGenerator, dataSegment) ->  {
-    List<Instruction> instructions = new ArrayList<>();
-
     Label overflowMsgLabel = labelGenerator.getLabel();
     dataSegment.put(overflowMsgLabel, "\"OverflowError: the result is too small/large to store in a 4-byte signed-integer.\\n\\0\"");
 
-    instructions.add(new Label("p_throw_overflow_error"));
-    instructions.add(new LDR(r0, new LabelAddressing(overflowMsgLabel), LDR));
-    instructions.add(new BL("p_throw_runtime_error"));
+    List<Instruction> instructions = List.of(
+      new Label("p_throw_overflow_error"),
+      new LDR(r0, new LabelAddressing(overflowMsgLabel), LDR),
+      new BL("p_throw_runtime_error")
+    );
     instructions.addAll(addThrowRuntimeError.routineFunctionAssemble(THROW_RUNTIME_ERROR, labelGenerator, dataSegment));
 
     return instructions;
@@ -247,122 +243,120 @@ public class ARMInstructionRoutines {
 
   /* print string (char array included) */
   private static List<Instruction> addPrintMultiple(Map<Label, String> dataSegment, LabelGenerator labelGenerator) {
-      List<Instruction> instructions = new ArrayList<>();
-
-    /* only add the helper if it doesn't exist yet */
-    if (!alreadyExist.contains(PRINT_STRING)) {
-
-      /* add this helper into alreadyExist list */
-      alreadyExist.add(PRINT_STRING);
-
-      /* add the format into the data list */
-      Label msg = addMsg("\"%.*s\\0\"", dataSegment, labelGenerator);
-
-      /* add the helper function label */
-      Label label = new Label(PRINT_STRING.toString());
-      instructions.add(label);
-      instructions.add(new Push(Collections.singletonList(LR)));
-      /* put the string length into r1 as snd arg */
-      instructions.add(new LDR(r1, new AddressingMode2(OFFSET, r0)));
-      /* skip the fst 4 bytes which is the length of the string */
-      instructions.add(new Add(r2, r0, new Operand2(4)));
-      instructions.add(new LDR(r0, new LabelAddressing(msg)));
-
-      instructions.addAll(addCommonPrint());
+    if(alreadyExist.contains(PRINT_STRING)) {
+      return new ArrayList<>();
     }
+
+    /* only add the helper if it doesn't exist yet
+       add this helper into alreadyExist list */
+    alreadyExist.add(PRINT_STRING);
+
+    /* add the format into the data list */
+    Label msg = addMsg("\"%.*s\\0\"", dataSegment, labelGenerator);
+
+    List<Instruction> instructions = List.of(
+      /* add the helper function label */
+      new Label(PRINT_STRING.toString()),
+      new Push(Collections.singletonList(LR)),
+      /* put the string length into r1 as snd arg */
+      new LDR(r1, new AddressingMode2(OFFSET, r0)),
+      /* skip the fst 4 bytes which is the length of the string */
+      new Add(r2, r0, new Operand2(4)),
+      new LDR(r0, new LabelAddressing(msg))
+    );
+    instructions.addAll(addCommonPrint());
 
     return instructions;
   }
 
   /* print int, print char or print reference */
   private static List<Instruction> addPrintSingle (RoutineInstruction routine, Map<Label, String> dataSegment, LabelGenerator labelGenerator) {
-    List<Instruction> instructions = new ArrayList<>();
-
-    /* only add the helper if it doesn't exist yet */
-    if (!alreadyExist.contains(routine)) {
-
-      /* add this helper into alreadyExist list */
-      alreadyExist.add(routine);
-
-      /* add the format into the data list */
-      Label msg = addMsg(printSingleMap.get(routine), dataSegment, labelGenerator);
-
-      /* add the helper function label */
-      Label label = new Label(routine.toString());
-      instructions.add(label);
-      instructions.add(new Push(Collections.singletonList(LR)));
-      /* put the content in r0 int o r1 as the snd arg of printf */
-      instructions.add(new Mov(r1, new Operand2(r0)));
-      /* fst arg of printf is the format */
-      instructions.add(new LDR(r0, new LabelAddressing(msg)));
-
-      instructions.addAll(addCommonPrint());
+    if (alreadyExist.contains(routine)) {
+      return new ArrayList<>();
     }
+
+    /* only add the helper if it doesn't exist yet
+       add this helper into alreadyExist list */
+    alreadyExist.add(routine);
+
+    /* add the format into the data list */
+    Label msg = addMsg(printSingleMap.get(routine), dataSegment, labelGenerator);
+
+    List<Instruction> instructions = List.of(
+      /* add the helper function label */
+      new Label(routine.toString()),
+      new Push(Collections.singletonList(LR)),
+      /* put the content in r0 int o r1 as the snd arg of printf */
+      new Mov(r1, new Operand2(r0)),
+      /* fst arg of printf is the format */
+      new LDR(r0, new LabelAddressing(msg))
+    );
+    instructions.addAll(addCommonPrint());
 
     return instructions;
   }
 
   /* print bool */
   private static List<Instruction> addPrintBool(Map<Label, String> dataSegment, LabelGenerator labelGenerator) {
-    List<Instruction> instructions = new ArrayList<>();
 
-    /* only add the helper if it doesn't exist yet */
-    if (!alreadyExist.contains(PRINT_BOOL)) {
 
-      /* add this helper into alreadyExist list */
-      alreadyExist.add(PRINT_BOOL);
-
-      /* add the msgTrue into the data list */
-      Label msgTrue = addMsg("\"true\\0\"", dataSegment, labelGenerator);
-      /* add the msgFalse into the data list */
-      Label msgFalse = addMsg("\"false\\0\"", dataSegment, labelGenerator);
-
-      /* add the helper function label */
-      Label label = new Label(PRINT_BOOL.toString());
-      instructions.add(label);
-      instructions.add(new Push(Collections.singletonList(LR)));
-      /* cmp the content in r0 with 0 */
-      instructions.add(new Cmp(r0, new Operand2(0)));
-      /* if not equal to 0 LDR true */
-      instructions.add(new LDR(r0, new LabelAddressing(msgTrue), LDRNE));
-      /* otherwise equal to 0 LDR false */
-      instructions.add(new LDR(r0, new LabelAddressing(msgFalse), LDREQ));
-
-      instructions.addAll(addCommonPrint());
+    if (alreadyExist.contains(PRINT_BOOL)) {
+      return new ArrayList<>();
     }
 
+    /* only add the helper if it doesn't exist yet
+       add this helper into alreadyExist list */
+    alreadyExist.add(PRINT_BOOL);
+
+    /* add the msgTrue into the data list */
+    Label msgTrue = addMsg("\"true\\0\"", dataSegment, labelGenerator);
+    /* add the msgFalse into the data list */
+    Label msgFalse = addMsg("\"false\\0\"", dataSegment, labelGenerator);
+
+    List<Instruction> instructions = List.of(
+      /* add the helper function label */
+      new Label(PRINT_BOOL.toString()),
+      new Push(Collections.singletonList(LR)),
+      /* cmp the content in r0 with 0 */
+      new Cmp(r0, new Operand2(0)),
+      /* if not equal to 0 LDR true */
+      new LDR(r0, new LabelAddressing(msgTrue), LDRNE),
+      /* otherwise equal to 0 LDR false */
+      new LDR(r0, new LabelAddressing(msgFalse), LDREQ)
+    );
+    instructions.addAll(addCommonPrint());
     return instructions;
   }
 
   private static List<Instruction> addCommonPrint() {
     return List.of(
-        /* skip the first 4 byte of the msg which is the length of it */
-        new Add(r0, r0, new Operand2(4)),
-        new BL(PRINTF.toString()),
-        /* refresh the r0 and buffer */
-        new Mov(r0, new Operand2(0)),
-        new BL(FFLUSH.toString()),
-        new Pop(Collections.singletonList(PC))
+      /* skip the first 4 byte of the msg which is the length of it */
+      new Add(r0, r0, new Operand2(4)),
+      new BL(PRINTF.toString()),
+      /* refresh the r0 and buffer */
+      new Mov(r0, new Operand2(0)),
+      new BL(FFLUSH.toString()),
+      new Pop(Collections.singletonList(PC))
     );
   }
 
   public static final Map<RoutineInstruction, RoutineFunction> routineFunctionMap = Map.ofEntries(
-          new AbstractMap.SimpleEntry<>(READ_INT, addRead),
-          new AbstractMap.SimpleEntry<>(READ_CHAR, addRead),
-          new AbstractMap.SimpleEntry<>(PRINT_INT, addPrint),
-          new AbstractMap.SimpleEntry<>(PRINT_BOOL, addPrint),
-          new AbstractMap.SimpleEntry<>(PRINT_CHAR, addPrint),
-          new AbstractMap.SimpleEntry<>(PRINT_STRING, addPrint),
-          new AbstractMap.SimpleEntry<>(PRINT_REFERENCE, addPrint),
-          new AbstractMap.SimpleEntry<>(PRINT_LN, addPrintln),
-          new AbstractMap.SimpleEntry<>(CHECK_DIVIDE_BY_ZERO, addCheckDivByZero),
-          new AbstractMap.SimpleEntry<>(THROW_RUNTIME_ERROR, addThrowRuntimeError),
-          new AbstractMap.SimpleEntry<>(CHECK_ARRAY_BOUND, addCheckArrayBound),
-          new AbstractMap.SimpleEntry<>(FREE_ARRAY, addFree),
-          new AbstractMap.SimpleEntry<>(FREE_PAIR, addFree),
-          new AbstractMap.SimpleEntry<>(CHECK_NULL_POINTER, addCheckNullPointer),
-          new AbstractMap.SimpleEntry<>(THROW_OVERFLOW_ERROR, addThrowOverflowError)
-          );
+    new AbstractMap.SimpleEntry<>(READ_INT, addRead),
+    new AbstractMap.SimpleEntry<>(READ_CHAR, addRead),
+    new AbstractMap.SimpleEntry<>(PRINT_INT, addPrint),
+    new AbstractMap.SimpleEntry<>(PRINT_BOOL, addPrint),
+    new AbstractMap.SimpleEntry<>(PRINT_CHAR, addPrint),
+    new AbstractMap.SimpleEntry<>(PRINT_STRING, addPrint),
+    new AbstractMap.SimpleEntry<>(PRINT_REFERENCE, addPrint),
+    new AbstractMap.SimpleEntry<>(PRINT_LN, addPrintln),
+    new AbstractMap.SimpleEntry<>(CHECK_DIVIDE_BY_ZERO, addCheckDivByZero),
+    new AbstractMap.SimpleEntry<>(THROW_RUNTIME_ERROR, addThrowRuntimeError),
+    new AbstractMap.SimpleEntry<>(CHECK_ARRAY_BOUND, addCheckArrayBound),
+    new AbstractMap.SimpleEntry<>(FREE_ARRAY, addFree),
+    new AbstractMap.SimpleEntry<>(FREE_PAIR, addFree),
+    new AbstractMap.SimpleEntry<>(CHECK_NULL_POINTER, addCheckNullPointer),
+    new AbstractMap.SimpleEntry<>(THROW_OVERFLOW_ERROR, addThrowOverflowError)
+  );
 
   private static Label addMsg(String msgAscii, Map<Label, String> data, LabelGenerator labelGenerator) {
     /* add a Msg into the data list */
